<resources>
    <!--APP-->
    <string name="app_name">Leer con Monclick</string>
    <string name="error">UPS ALGO SALIO MAL!!</string>
    <string name="back_home">VOLVER A INICIO</string>
    <string name="tv_lscreen">0 %</string>
    <string name="who_are_u">¿QUIÉN ERES?</string>
    <string name="child">ALUMNOS</string>
    <string name="professional">PROFESIONAL</string>
    <string name="login_title">INICIO DE SESION</string>
    <string name="email">EMAIL</string>
    <string name="password">CONTRASEÑA</string>
    <string name="login">ACCEDER</string>
    <string name="forgot_password">¿OLVIDASTE LA CONTRASEÑA?</string>
    <string name="register">REGISTRARSE</string>
    <string name="remember_user">RECORDAR USUARIO</string>
    <string name="frecuent_questions">PREGUNTAS FRECUENTES</string>
    <string name="tutorial">VER TUTORIAL</string>
    <string name="email_help">CORREO AYUDA</string>
    <string name="name">NOMBRE</string>
    <string name="code">CODIGO</string>
    <string name="repeat_pass">REPETIR CONTRASEÑA</string>
    <string name="error_mail">EMAIL NO VALIDO</string>
    <string name="error_pass">CONTRASEÑA NO VALIDA</string>
    <string name="add">Añadir</string>
    <string name="cancel">Cancelar</string>
    <string name="error_pass_confirmation">LAS CONTRASEÑAS NO SON IGUALES</string>
    <string name="icon">ICONO</string>
    <string name="datonisc">DALTONISMO</string>
    <string name="size_text">TAMAÑO TEXTO</string>
    <string name="size_text_big">GRANDE</string>
    <string name="size_text_mid">MEDIANO</string>
    <string name="size_text_small">PEQUEÑO</string>
    <string name="acromatic">TRITANOPIA</string>
    <string name="nothing">NINGUNO</string>
    <string name="log_out">CERRAR SESIÓN</string>
    <string name="save_changes">GUARDAR CAMBIOS</string>
    <string name="settings">Ajustes</string>
    <string name="add_note">AÑADIR NOTA</string>
    <!--Professional-CONTENT-->
    <string name="personalize_content">PERSONALIZAR CONTENIDO</string>
    <string name="img">IMÁGENES</string>
    <string name="word">Palabra</string>
    <!--Professional-ADD PATIENT-->
    <string name="add_patient">AÑADIR PACIENTE</string>
    <string name="age">EDAD</string>
    <string name="name_patient">NOMBRE PACIENTE</string>
    <string name="progress">PROGRESO</string>
    <string name="level">NIVEL 1</string>
    <string name="play">JUGAR</string>
    <!--Professional-Task and Calendar-->
    <string name="list_Task">Lista de Citas</string>
    <string name="add_task">AÑADIR CITA</string>
    <string name="noti">NOTI</string>
    <string name="date">FECHA</string>
    <string name="time">TIEMPO</string>
    <string name="tittle">TÍTULO</string>
    <string name="description">DESCRIPCIÓN</string>
    <string name="clock">RELOJ</string>
    <!--Patient-PROGRESS-->
    <string name="progression">PROGRESO</string>
    <string name="actualLvlText">NIVEL ACTUAL:</string>
    <string name="lvl1">NIVEL 1</string>
    <string name="lvl2">NIVEL 2</string>
    <string name="lvl3">NIVEL 3</string>
    <string name="lvl4">NIVEL 4</string>
    <string name="lvl5">NIVEL 5</string>
    <string name="lvl6">NIVEL 6</string>
    <!--Patient-CATEGORY-->
    <string name="difficulty">DIFICULTAD</string>
    <string name="tittle_category">SELECCIÓN DE CATEGORÍA</string>
    <string name="animals">Animales</string>
    <string name="house">Hogar</string>
    <string name="category">Personal</string>
    <string name="food">Comida</string>
    <string name="percentage">percentage</string>
    <string name="stadistic">Estadísticas</string>



</resources>