<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".patient.SettingsPatientActivity"
    android:background="@color/background"
    android:id="@+id/settingPatients">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iconPatientId"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:src="@drawable/mono"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013" />

    <ImageButton
        android:id="@+id/btnImageBackScreenId6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@null"
        android:onClick="goBack"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toStartOf="@+id/textViewTitlePatien"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/ic_arrow_back_android" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:onClick="goHelp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.979"
        app:srcCompat="@drawable/ic_help" />

    <TextView
        android:id="@+id/textViewTitlePatien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="3dp"
        android:text="@string/settings"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <View
        android:id="@+id/view4"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@drawable/separator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageButton10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewNamePatient"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/name"
                android:textSize="20dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/editTextTextPersonNameEditPatient"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginEnd="150dp"
                android:textSize="20dp"
                android:inputType="textPersonName"
                android:text="@string/name" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDaltonismPatient"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/datonisc"
                android:textSize="20dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <ToggleButton
                android:id="@+id/toggleButtonNoDaltoPatient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="changeDalto"
                android:text="ToggleButton"
                android:textOff="@string/nothing"
                android:textOn="@string/nothing"
                android:layout_marginLeft="45dp"
                android:background="@drawable/toggle_btn_style"/>

            <ToggleButton
                android:id="@+id/toggleButtonDaltoPatient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="changeDalto"
                android:text="ToggleButton"
                android:textOff="@string/acromatic"
                android:textOn="@string/acromatic"
                android:layout_marginRight="40dp"
                android:background="@drawable/toggle_btn_style"
                android:layout_marginLeft="20dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSizePatient"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/size_text"
                android:textSize="20dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <ToggleButton
                android:id="@+id/toggleButtonSmallPatient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="changeSize"
                android:text="ToggleButton"
                android:textOff="@string/size_text_small"
                android:textOn="@string/size_text_small"
                android:background="@drawable/toggle_btn_style"/>

            <ToggleButton
                android:id="@+id/toggleButtonMidPatient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="changeSize"
                android:text="ToggleButton"
                android:textOff="@string/size_text_mid"
                android:textOn="@string/size_text_mid"
                android:background="@drawable/toggle_btn_style"
                android:layout_marginLeft="20dp"/>



            <ToggleButton
                android:id="@+id/toggleButtonBigPatient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="changeSize"
                android:text="ToggleButton"
                android:textOff="@string/size_text_big"
                android:textOn="@string/size_text_big"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/toggle_btn_style"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:padding="10dp">
            <Button
                android:id="@+id/buttonSaveChangesPatient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="saveChanges"
                android:text="@string/save_changes"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/buttonLogOutPatient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_style_red"
                android:onClick="logOut"
                android:text="@string/log_out"
                android:layout_marginRight="100dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>