<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tittleTaskId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CalendarActivity">

    <ImageButton
        android:id="@+id/btnHelpId3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:background="@null"
        android:onClick="goHelp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/viewId2"
        app:srcCompat="@drawable/ic_help" />

    <View
        android:id="@+id/viewId2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/separator"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnImageBackScreenId3" />

    <ImageButton
        android:id="@+id/btnImageBackScreenId3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="5dp"
        android:background="@null"
        android:onClick="goBack"
        app:layout_constraintBottom_toTopOf="@+id/viewId2"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_android" />

    <TextView
        android:id="@+id/timeTaskId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="15dp"
        android:text="@string/time"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/calendarView"
        app:layout_constraintTop_toBottomOf="@+id/dateTaskId"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/tittle"
        app:layout_constraintBottom_toTopOf="@+id/descriptionTaskId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calendarView"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="271dp"
        android:layout_height="255dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/timeTaskId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </CalendarView>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="202dp"
        android:layout_height="21dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="259dp"
        android:layout_marginBottom="5dp"
        android:text="@string/add_task"
        app:layout_constraintBottom_toTopOf="@+id/viewId2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnImageBackScreenId3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descriptionTaskId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/dateTaskId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calendarView"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/dateTaskId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="5dp"
        android:text="@string/date"
        app:layout_constraintBottom_toTopOf="@+id/timeTaskId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/calendarView"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTaskId" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="10dp"
        android:text="@string/clock"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/timeTaskId"
        app:layout_constraintTop_toBottomOf="@+id/dateTaskId"
        android:onClick="openTime"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/calendarView"
        app:layout_constraintTop_toBottomOf="@+id/timeTaskId"
        android:onClick="saveTask"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="25dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="8dp"
        android:text="Noti"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/calendarView"
        app:layout_constraintTop_toBottomOf="@+id/timeTaskId" />


</androidx.constraintlayout.widget.ConstraintLayout>